# ULVM

./: .gitignore  Cargo.toml  Makefile  README.md
.github/: copilot-instructions.md
copilot-instructions/: git-commit-message.instruction.md
scripts/: install.bat  install.sh  uninstall.bat  uninstall.sh
src/: lib.rs  main.rs
src/cli/: mod.rs  node.rs  rust.rs
src/cli/command/setup/: mod.rs  unix.rs  windows.rs
src/core/: archive.rs  downloads.rs  fs.rs  mod.rs  semver.rs
src/core/config/: errors.rs  mod.rs  ulvm_config.rs
src/lang/: mod.rs
src/lang/node/: mod.rs  version.rs
src/lang/node/command/: install.rs  list.rs  mod.rs  uninstall.rs  use.rs
src/lang/rust/: fs_rust.rs  mod.rs
src/lang/rust/command/: install_rust.rs  list_rust.rs  mod.rs  uninstall_rust.rs  use_rust.rs
src/platform/: mod.rs
src/ui/: mod.rs
