[package]
name = "ULVM"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.37", features = ["derive"] }
dirs = "6.0.0"
flate2 = "1.1.1"
reqwest = { version = "0.12.15", features = ["json", "blocking"] }
rusty-hook = "0.11.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tar = "0.4.44"
tempfile = "3.19.1"
thiserror = "2.0.12"
