[package]
name = "ulvm"
version = "0.1.0"
edition = "2024"

default-run = "ulvm"

[[bin]]
name = "ulvm"
path = "src/main.rs"

[[bin]]
name = "ulvm_shim"
path = "src/bin/shim.rs"

[dependencies]
clap = { version = "4.5.37", features = ["derive"] }
colored = "3.0.0"
dirs = "6.0.0"
flate2 = "1.1.1"
reqwest = { version = "0.12.15", features = ["json", "blocking"] }
rusty-hook = "0.11.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sevenz-rust = "0.6.1"
tar = "0.4.44"
tempfile = "3.19.1"
thiserror = "2.0.12"
toml = "0.8.21"
